Fixed line return to break in display

--- a/lac/static/css/custom.css
+++ b/lac/static/css/custom.css
@@ -42,3 +42,7 @@
   border-radius: 4px;
   background-color:  rgba(251, 251, 251, 0.93);
 }
+
+ul li p {
+  margin: 0px;
+}
